Mise à jour : login.scss, register.ts, header.html et event-form-modal.ts

--- a/src/app/core/components/header/header.html
+++ b/src/app/core/components/header/header.html
@@ -1,4 +1,4 @@
-<p>header works!</p><header class="navbar">
+<p></p><header class="navbar">
   <div class="logo">Tableau de bord</div>
   
   <nav class="user-actions">
